[tool.poetry]
authors = ["Danyal Zia Khan <danyal6870@gmail.com>"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Other Environment",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
description = "HTML parsing of JavaScript heavy websites using multiple backends (lxml, modest, playwright, etc.)."
license = "MIT License"
name = "dunia"
readme = "README.md"
version = "0.1.5"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
async-lru = "^1.0.3"
async-timeout = "^4.0.2"
backoff = "^2.2.1"
charset-normalizer = "^3.0.0"
cssselect = "^1.2.0"
loguru = "^0.6.0"
lxml = {path = "lxml-4.9.0-cp311-cp311-win_amd64.whl"}
playwright = "^1.27.1"
selectolax = "^0.3.11"
throttler = "^1.2.1"

[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
ipykernel = "^6.16.2"
ipython = "^8.5.0"
isort = "^5.10.1"
pre-commit = "^2.20.0"

[tool.black]
include = '\.py$'
line-length = 88
target_version = ['py310']

[tool.isort]
float_to_top = true
include_trailing_comma = true # corresponds to -tc flag
line_length = 88 # corresponds to -w  flag
multi_line_output = 3 # corresponds to -m  flag
profile = "black"
skip_glob = ".venv, */build, */.git"

[tool.pyright]
exclude = ["**/node_modules", "**/__pycache__", "**/.venv"]
include = ["."]
stubPath = "stubs"
venv = ".venv"

reportImportCycles = true
reportMissingImports = true
reportMissingTypeStubs = false
reportPrivateUsage = true
reportUnknownArgumentType = true
reportUnknownLambdaType = false
reportUnknownMemberType = false
reportUnknownParameterType = "warning"
reportUnknownVariableType = "warning"
reportUntypedFunctionDecorator = false
reportUnusedImport = "warning"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
