[tool.poetry]
authors = ["Danyal Zia Khan <danyal6870@gmail.com>"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Other Environment",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
description = "HTML parsing of JavaScript heavy websites using multiple backends (lxml, modest, playwright, etc.)."
license = "MIT License"
name = "dunia"
readme = "README.md"
version = "0.1.5"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
async-lru = "^2.0.4"
async-timeout = "^4.0.3"
backoff = "^2.2.1"
charset-normalizer = "^3.3.2"
cssselect = "^1.2.0"
loguru = "^0.7.2"
playwright = "^1.44.0"
selectolax = "^0.3.21"
throttler = "^1.2.2"
lxml = "^5.2.2"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
ipykernel = "^6.29.4"
ipython = "^8.24.0"
isort = "^5.13.2"
pre-commit = "^3.7.1"

[tool.black]
include = '\.py$'
line-length = 88
target-version = ['py312']

[tool.isort]
float_to_top = true
include_trailing_comma = true # corresponds to -tc flag
line_length = 88 # corresponds to -w  flag
multi_line_output = 3 # corresponds to -m  flag
profile = "black"
skip_glob = ".venv, */build, */.git"

[tool.pyright]
exclude = ["**/node_modules", "**/__pycache__", "**/.venv"]
include = ["."]
venv = ".venv"

reportImportCycles = true
reportMissingImports = true
reportMissingTypeStubs = false
reportPrivateUsage = true
reportUnknownArgumentType = true
reportUnknownLambdaType = false
reportUnknownMemberType = false
reportUnknownParameterType = "warning"
reportUnknownVariableType = "warning"
reportUntypedFunctionDecorator = false
reportUnusedImport = "warning"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
